[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/art/background/space.jpg" type="Texture" id=2]
[ext_resource path="res://assets/art/background/title.png" type="Texture" id=3]

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Emulogic-zrEw.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.796078, 1, 0.631373 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_right = 10.0

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="ImageTexture" id=5]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.796078, 1, 0.631373 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_right = 10.0

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.796078, 1, 0.631373 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_right = 10.0

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Title" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "idle"
anims/idle = SubResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -129.0
margin_right = 152.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 140.0
margin_bottom = 26.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
theme = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 4 )
text = "Start"
icon = SubResource( 5 )
align = 0

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 140.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "Options"
align = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 140.0
margin_bottom = 86.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 7 )
text = "Quit"
align = 0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
